# local-code-mcp

./: .gitignore  CHANGELOG_LOCAL_CODE_MCP.md  CONSOLIDATION.md  PROGRAM_TEST_REPORT.md  README.md  pyproject.toml
local_code_mcp/: CHANGELOG_TIMEOUT_GIT_COMPILE_FIX.md  INSTALL_WINDOWS.md  README_DEPRECATED_NESTED_PROJECT.md  cli.py  command_tools.py  config.example.json  config.py  git_tools.py  pyproject.toml  safety.py  server.py
local_code_mcp/local_code_mcp/: __init__.py  _canonical.py  cli.py  command_tools.py  config.py  filesystem_tools.py  git_tools.py  package_tools.py  patch_tools.py  project_tools.py  server.py
local_code_mcp/policies/: command_allowlist.example.json
local_code_mcp/tests/: test_command_tools.py  test_git_tools.py  test_package_tools.py  test_patch_tools.py
scripts/: install_windows.ps1  run_server.ps1  run_tests.ps1
skills/code-change/: SKILL.md
skills/code-change/agents/: openai.yaml
skills/code-change/references/: review-checklist.md
skills/code-change/scripts/: make_change_package.py
templates/: CHANGELOG_TEMPLATE.md
tests/: test_cli.py  test_safety.py
