[project]
name = "local-code-mcp"
version = "0.1.1"
description = "Safe local Windows project file editing and packaging MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenCrab Local Automation" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
local-code-mcp = "local_code_mcp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
